13-deploy-strategies/03-blue-green/nginx.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
spec:
  replicas: 10
  selector:
    matchLabels:
      app: api-app
      tag: nginx
  template:
    metadata:
      labels:
        app: api-app
        tag: nginx
    spec:
      containers:
        - name: nginx-app
          image: nginx
          lifecycle:
            postStart:
              exec:
                command:
                  [
                    "sh",
                    "-c",
                    "echo $(hostname) > /usr/share/nginx/html/index.html",
                  ]
          resources:
            limits:
              memory: "64Mi"
              cpu: "100m"
          ports:
            - containerPort: 80
