13-deploy-strategies/03-blue-green/service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
spec:
  selector:
    app: api-app
    tag: httpd
  ports:
    - port: 80
      targetPort: 80
